--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#000"/>
         <link rel="manifest" href="manifest.json">
+        <meta name="color-scheme" content="light only">
     </head>
     <body>
         <section class="cards">
