please PWA work

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
         <link rel="stylesheet" href="style.css">
         <script src="script.js" defer></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="theme-color" content="#000"/>
-        <link rel="manifest" href="manifest.json">
         <meta name="color-scheme" content="light only">
+        <meta name="theme-color" content="#000"/>
+        <title>政変</title>
+        <link rel="manifest" href="manifest.json">
     </head>
     <body>
         <section class="cards">
