common PWA pleaseee

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="theme-color" content="#000"/>
         <title>政変</title>
         <link rel="manifest" href="manifest.json">
+        <link rel="apple-touch-icon" href="icon/ios/192.png" />
     </head>
     <body>
         <section class="cards">
