CSS fixes + converted SVG to PNG images

--- a/index.html
+++ b/index.html
@@ -8,26 +8,26 @@
         <meta name="theme-color" content="#000"/>
         <title>政変</title>
         <link rel="manifest" href="manifest.json">
-        <link rel="apple-touch-icon" href="icon/ios/192.png" />
+        <link rel="apple-touch-icon" href="icon/ios/192.png"/>
     </head>
     <body>
         <section class="cards">
             <div class="card-category">
                 <h1><ruby>政変<rt>セイヘン</rt></ruby></h1>
-                <button class="shuffle" id="random-select">⚄</button>
+                <button class="shuffle" id="random-select"><span>⚄</span></button>
                 <h2>Economy</h2>
                 <div class="flex">
                     <button class="card active" id="duke">
-                        <img src="img/duke.svg">
+                        <img src="img/duke.png">
                     </button>
                     <button class="card" id="underdog">
-                        <img src="img/underdog.svg">
+                        <img src="img/underdog.png">
                     </button>
                     <button class="card" id="bureaucrat">
-                        <img src="img/bureaucrat.svg">
+                        <img src="img/bureaucrat.png">
                     </button>
                     <button class="card" id="capitalist">
-                        <img src="img/capitalist.svg">
+                        <img src="img/capitalist.png">
                     </button>
                 </div>
             </div>
@@ -35,10 +35,10 @@
                 <h2>Assassination</h2>
                 <div class="flex">
                     <button class="card active" id="assassin">
-                        <img src="img/assassin.svg">
+                        <img src="img/assassin.png">
                     </button>
                     <button class="card" id="rioter">
-                        <img src="img/rioter.svg">
+                        <img src="img/rioter.png">
                     </button>
                 </div>
             </div>
@@ -46,19 +46,19 @@
                 <h2>Theft</h2>
                 <div class="flex">
                     <button class="card active" id="captain">
-                        <img src="img/captain.svg">
+                        <img src="img/captain.png">
                     </button>
                     <button class="card" id="nomad">
-                        <img src="img/nomad.svg">
+                        <img src="img/nomad.png">
                     </button>
                     <button class="card" id="blackmailer">
-                        <img src="img/blackmailer.svg">
+                        <img src="img/blackmailer.png">
                     </button>
                     <button class="card" id="gunslinger">
-                        <img src="img/gunslinger.svg">
+                        <img src="img/gunslinger.png">
                     </button>
                     <button class="card" id="communist">
-                        <img src="img/communist.svg">
+                        <img src="img/communist.png">
                     </button>
                 </div>
             </div>
@@ -66,25 +66,25 @@
                 <h2>Card Flow</h2>
                 <div class="flex">
                     <button class="card active" id="ambassador">
-                        <img src="img/ambassador.svg">
+                        <img src="img/ambassador.png">
                     </button>
                     <button class="card" id="mastermind">
-                        <img src="img/mastermind.svg">
+                        <img src="img/mastermind.png">
                     </button>
                     <button class="card" id="inquisitor">
-                        <img src="img/inquisitor.svg">
+                        <img src="img/inquisitor.png">
                     </button>
                     <button class="card" id="jester">
-                        <img src="img/jester.svg">
+                        <img src="img/jester.png">
                     </button>
                     <button class="card" id="instigator">
-                        <img src="img/instigator.svg">
+                        <img src="img/instigator.png">
                     </button>
                     <button class="card" id="diplomat">
-                        <img src="img/diplomat.svg">
+                        <img src="img/diplomat.png">
                     </button>
                     <button class="card" id="mad_scientist">
-                        <img src="img/mad_scientist.svg">
+                        <img src="img/mad_scientist.png">
                     </button>
                 </div>
             </div>
@@ -92,16 +92,16 @@
                 <h2>Mirrors</h2>
                 <div class="flex">
                     <button class="card active" id="countess">
-                        <img src="img/countess.svg">
+                        <img src="img/countess.png">
                     </button>
                     <button class="card" id="pariah">
-                        <img src="img/pariah.svg">
+                        <img src="img/pariah.png">
                     </button>
                     <button class="card" id="lawyer">
-                        <img src="img/lawyer.svg">
+                        <img src="img/lawyer.png">
                     </button>
                     <button class="card" id="sacrifice">
-                        <img src="img/sacrifice.svg">
+                        <img src="img/sacrifice.png">
                     </button>
                 </div>  
             </div>
